// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`club mutations:  create create club with all information 1`] = `
{
  "data": {
    "createClub": {
      "club": {
        "address": "address",
        "contact": "contact",
        "description": "description",
        "email": "email",
        "id": 3,
        "imageUrls": [],
        "links": [
          {
            "href": "test",
            "type": "FACEBOOK",
          },
        ],
        "name": "test",
        "region": "region",
        "specials": "speicals",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`club mutations:  create create club with only required information 1`] = `
{
  "data": {
    "createClub": {
      "club": {
        "address": null,
        "contact": null,
        "description": null,
        "email": null,
        "id": 3,
        "imageUrls": [],
        "links": [],
        "name": "test",
        "region": null,
        "specials": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`club mutations:  create create club without being admin should result in error 1`] = `
[
  [GraphQLError: You need to be logged in as admin to mutate data],
]
`;

exports[`club mutations:  update update club with all information 1`] = `
{
  "data": {
    "updateClub": {
      "club": {
        "address": "updated-address",
        "contact": "updated-contact",
        "description": "updated-description",
        "email": "updated-email",
        "id": 1,
        "imageUrls": [],
        "links": [
          {
            "href": "updated-link",
            "type": "FACEBOOK",
          },
        ],
        "name": "updated-test",
        "region": "updated-region",
        "specials": "updated-speicals",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`club mutations:  update update club with only required information 1`] = `
{
  "data": {
    "updateClub": {
      "club": {
        "address": null,
        "contact": null,
        "description": null,
        "email": null,
        "id": 1,
        "imageUrls": [],
        "links": [],
        "name": "updated-name",
        "region": null,
        "specials": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`club mutations:  update update club without being admin should result in error 1`] = `
[
  [GraphQLError: You need to be logged in as admin to mutate data],
]
`;
